frame/support/test/tests/pallet_ui/genesis_002.stderr
error: Invalid genesis builder: expect `GenesisBuild<T>` or `GenesisBuild<T, I>`
  --> $DIR/genesis_002.rs:19:7
   |
19 |     impl GenesisBuild for GenesisConfig {}
   |          ^^^^^^^^^^^^

error: expected `<`
 --> $DIR/genesis_002.rs:1:1
  |
1 | #[frame_support::pallet(Example)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
